--- a/Chicago/src/main/webapp/css/book_main.css
+++ b/Chicago/src/main/webapp/css/book_main.css
@@ -5,28 +5,60 @@
 	padding: 0px;
 }
 
-.div_menu {
-	width: 20%;
-	margin: 150px;
+.list_container {
+	display: flex;
+	width:1200px;
+	margin: 0 360px;
 }
 
-.nav_bar {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	width: 200px;
+.div_lmenu {
+	flex: 1;
+	background-color : #f1f1f1;
+	height: 200px;
+	text-align: center;
+	margin: 0 10px;
 	background-color: #f1f1f1;
 }
 
-.nav_bar li a {
+.category {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.category li a {
 	display: block;
 	color: #000;
 	padding: 8px 16px;
+ 	text-decoration: none;
+}
+
+.category li a.active {
+	background-color: #68A4C4;;
+	color: white;
+}
+
+li a:hover:not(.active){
+	background-color: #555;
+	color: white;
 	text-decoration: none;
 }
 
-/* Change the link color on hover */
-.nav_bar li a:hover {
-	background-color: #555;
-	color: white;
+.div_content {
+	flex: 5;
+	background-color: #fff;
 }
+
+.tabs_alternative {
+	background-color: #F1F1f1;
+}
+
+.description {
+	text-align: left;
+}
+
+/* .div_rmenu {
+	flex: 0.9;
+	background-color: #f1f1f1;
+	margin: 0 10px;
+} */
