--- a/Chicago/src/main/webapp/book_css/bookMain.css
+++ b/Chicago/src/main/webapp/book_css/bookMain.css
@@ -27,25 +27,25 @@ body {
 }
 
 .imgdiv {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    position: relative;
-    min-height: 170px;
-    padding-left: 15px;
-    padding-right: 15px;
-    float: left;
-    width: 15%;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	position: relative;
+	min-height: 170px;
+	padding-left: 15px;
+	padding-right: 15px;
+	float: left;
+	width: 15%;
 }
 
 .newimg {
-    width: auto;
-    max-width: 100%;
-    height: 120px;
-    margin: 0;
-    padding: 0;
-    border: none;
-    line-height: normal;
-    vertical-align: middle;
+	width: auto;
+	max-width: 100%;
+	height: 120px;
+	margin: 0;
+	padding: 0;
+	border: none;
+	line-height: normal;
+	vertical-align: middle;
 }
 
 .desdiv {
@@ -55,4 +55,58 @@ body {
 	padding-right: 15px;
 	float: right;
 	width: 85%;
+}
+
+/* .content_cnt {
+	background-color: #f1f1f1;
+	padding-top: 10px;
+	padding-bottom: 2px;
+}
+
+.content_cnt p {
+	text-indent: 2%; 들여쓰기
+} */
+.content_srch {
+	background-color: #f1f1f1;
+	padding-top: 10px;
+	padding-bottom: 2px;
+}
+
+.content_srch p {
+	text-indent: 2%;
+}
+
+.tdimage img {
+	width: 105px;
+	height: 140px;
+}
+
+.bookList {
+	border-bottom: 1px solid #000;
+}
+
+.icon {
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+}
+
+.icontd {
+	height: 30px;
+	padding-top: 10px;
+}
+
+.eventimg {
+	border: 1px solid;
+	height: 99%;
+	width: 100%;
+}
+
+img {
+	height: 120px;
+	width: 100px;
+}
+
+.destd {
+	background-color: #f1f1f1;
 }
