일단 점심 발표용

--- a/Chicago/src/main/webapp/mypage_css/memberinfo.css
+++ b/Chicago/src/main/webapp/mypage_css/memberinfo.css
@@ -72,7 +72,7 @@
 
 /* MyPageContent */
 #MyPageContent {
-	background-color: #666666;
+	background-color: #ffffff;
 	width: 90%;
 	height: 90%;
 	border-radius: 0px;
@@ -85,7 +85,7 @@
 
 /* LeftContent */
 #LeftContent {
-	background-color: #333333;
+	background-color: #ffffff;
 	width: 20%;
 	height: 90%;
 	border-radius: 0px;
@@ -98,7 +98,7 @@
 
 /* MainContent */
 #MainContent {
-	background-color: #222222;
+	background-color: #ffffff;
 	width: 80%;
 	height: 90%;
 	border-radius: 0px;
