--- a/Chicago/src/main/webapp/mypage_css/orderlist.css
+++ b/Chicago/src/main/webapp/mypage_css/orderlist.css
@@ -85,7 +85,7 @@
 
 /* MyPageContent */
 #MyPageContent {
-	background-color: #666666;
+	background-color: #ffffff;
 	width: 90%;
 	height: 100%;
 	border-radius: 0px;
@@ -96,7 +96,7 @@
 
 /* LeftContent */
 #LeftContent {
-	background-color: #333333;
+	background-color: #ffffff;
 	width: 20%;
 	height: 90%;
 	border-radius: 0px;
@@ -108,7 +108,7 @@
 
 /* MainContent */
 #MainContent {
-	background-color: #222222;
+	background-color: #ffffff;
 	width: 80%;
 	height: 90%;
 	border-radius: 0px;
