--- a/Chicago/src/main/webapp/book_css/bookMain.css
+++ b/Chicago/src/main/webapp/book_css/bookMain.css
@@ -110,3 +110,11 @@ img {
 .destd {
 	background-color: #f1f1f1;
 }
+
+/* * {
+	border:none;
+	border-right:0px;
+	border-top:0px;
+	border-left:0px;
+	border-bottom:0px;
+} */
