--- a/Chicago/src/main/webapp/book_css/bookMain.css
+++ b/Chicago/src/main/webapp/book_css/bookMain.css
@@ -118,3 +118,9 @@ img {
 	border-left:0px;
 	border-bottom:0px;
 } */
+.button {
+	background-color: white;
+	color: black;
+	border: 2px solid #505050;
+	font-size: 11px;
+}
