--- a/Chicago/src/main/webapp/mypage_css/mypage.css
+++ b/Chicago/src/main/webapp/mypage_css/mypage.css
@@ -20,7 +20,97 @@
 
 
 
+/* <My Page Main Form Set > */
+/* MyPageMainOutlineForm */
+#MyPageMainOutlineForm {
+	background-color: #ffffff;
+	width: 100%;
+	height: 100%;
+	border-radius: 0px;
+	padding: auto;
+	margin: auto;
+	position: relative;
+	display: block;
+}
 
+/* MyPageMainMiddlelineForm */
+#MyPageMainMiddlelineForm {
+	background-color: #ffffff;
+	width: 95%;
+	height: 100%;
+	border-radius: 0px;
+	padding: auto;
+	margin: auto;
+	position: relative;
+	display: block;
+}
+
+/* MyPageHeadlineForm */
+#MyPageHeadlineForm {
+	background-color: #ffffff;
+	box-sizing: border-box;
+	width: 90%;
+	height: 10%;
+	border-radius: 0px;
+	padding: -10 -10 -10 -10px;
+	margin: auto;
+	position: relative;
+	display: block;
+}
+
+/* MyPageHeadline */
+#MyPageHeadline {
+	color: #222;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 1.5em;
+	letter-spacing: -1px;
+    margin-top: 20px;
+    padding: 0 0 0 50px;
+    display: block;
+}
+
+/* MyPageContent */
+#MyPageContent {
+	background-color: #ffffff;
+	width: 90%;
+	height: 90%;
+	border-radius: 0px;
+	float: right;
+	padding: auto;
+	margin: auto;
+	position: relative;
+	display: block;
+}
+
+/* LeftContent */
+#LeftContent {
+	background-color: #ffffff;
+	width: 20%;
+	height: 90%;
+	border-radius: 0px;
+	float: left;
+	position: relative;
+	padding: auto;
+	margin: auto;
+	display: block;
+}
+
+/* MainContent */
+#MainContent {
+	background-color: #ffffff;
+	width: 80%;
+	height: 90%;
+	border-radius: 0px;
+	float: right;
+	position: relative;
+	padding: auto;
+	margin: auto;
+	display: block;
+}
+
+/* LeftContent detail */
+/* LeftContent detail */
 
 #OrderlistTable {display: table; width: 100%;}
 .row {display: table-row;}
@@ -44,103 +134,6 @@
 .col25 {width: 12%;}
 .col26 {width: 12%;}
 .col2B {width: 10%;}
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* <My Page Main Form Set > */
-/* MyPageMainOutlineForm */
-#MyPageMainOutlineForm {
-	background-color: #ffffff;
-	width: 100%;
-	height: 100%;
-	border-radius: 0px;
-	padding: auto;
-	margin: auto;
-	position: relative;
-}
-
-/* MyPageMainMiddlelineForm */
-#MyPageMainMiddlelineForm {
-	background-color: #ffffff;
-	box-sizing: border-box;
-	width: 95%;
-	height: 100%;
-	border-radius: 0px;
-	padding: auto;
-	margin: auto;
-	position: relative;
-}
-
-/* MyPageHeadlineForm */
-#MyPageHeadlineForm {
-	background-color: #ffffff;
-	box-sizing: inherit;
-	width: 90%;
-	height: 10%;
-	border-radius: 0px;
-	padding: -10 -10 -10 -10px;
-	margin: auto;
-	position: relative;
-}
-
-/* MyPageHeadline */
-#MyPageHeadline {
-	color: #222;
-    font-size: 35px;
-    font-weight: 700;
-    line-height: 1.5em;
-	letter-spacing: -1px;
-    margin-top: 20px;
-    padding: 0 0 0 50px;
-}
-
-/* MyPageContent */
-#MyPageContent {
-	background-color: #ffffff;
-	width: 90%;
-	height: 100%;
-	border-radius: 0px;
-	padding: auto;
-	margin: auto;
-	position: relative;
-}
-
-/* LeftContent */
-#LeftContent {
-	background-color: #ffffff;
-	width: 20%;
-	height: 90%;
-	border-radius: 0px;
-	float: left;
-	position: relative;
-	padding: auto;
-	margin: auto;
-}
-
-/* MainContent */
-#MainContent {
-	background-color: #ffffff;
-	width: 80%;
-	height: 90%;
-	border-radius: 0px;
-	float: right;
-	position: relative;
-	padding: auto;
-	margin: auto;
-}
-
-
-
 
 
 
